About page - Fix more spacing between sections

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -265,9 +265,6 @@
           margin-left: -85px
         p
           margin-top: 15px
-            
-  #contact
-    margin-top: 130px
           
   #files
     padding: 30px 0
